tests/error/function_in_struct.c
// fail "Cannot declare a function in a struct."

struct {
	void func(void);
};
